--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,22 +1,9 @@
 main:
 
-  - title: Continual Learning for Abdominal Multi-Organ and Tumor Segmentation
-    authors: Yixiao Zhang, Xinyi Li, Huimiao Chen, Alan Yuille, <strong>Yaoyao Liu*</strong>, Zongwei Zhou* (*Corresponding authors)
-    conference_short: MICCAI
-    conference: International Conference on Medical Image Computing and Computer-Assisted Intervention <strong>(MICCAI)</strong>, 2023.
-    pdf: https://arxiv.org/pdf/2306.00988.pdf
-    code: https://github.com/MrGiovanni/ContinualLearning
-    bibtex: https://bib.yliu.me/MICCAI23.txt
-    image: ./assets/img/teaser_example_2.png
-    notes: Early Accept
-
-  - title: "Mnemonics Training: Multi-Class Incremental Learning without Forgetting"
-    authors: <strong>Yaoyao Liu</strong>, Yuting Su, An-An Liu, Bernt Schiele, Qianru Sun
-    conference_short: CVPR
-    conference: IEEE/CVF Conference on Computer Vision and Pattern Recognition <strong>(CVPR)</strong>, 2020.
-    pdf: https://arxiv.org/pdf/2002.10211.pdf
-    code: https://github.com/yaoyao-liu/class-incremental-learning/tree/main/mnemonics-training
-    page: https://class-il.mpi-inf.mpg.de/mnemonics/
-    bibtex: https://class-il.mpi-inf.mpg.de/mnemonics/
-    notes: Oral Presentation
-    image: ./assets/img/teaser_example.png
+  - title: 'From Dynamic to Static: Stepwisely Generate HDR Image for Ghost Removal'
+    authors: Qingsen Yan, Kangzhen Yang, Tao Hu, Genggeng Chen, Kexin Dai, Peng Wu, Wenqi Ren, Yanning Zhang
+    journal_short: TCSVT
+    journal: IEEE Transactions on Circuits and Systems for Video Technology
+    bibtex: https://scholar.googleusercontent.com/scholar.bib?q=info:xtL01D53NiwJ:scholar.google.com/&output=citation&scisdr=ClHXxVHKEPbD0bfnmqk:AFWwaeYAAAAAZwThgqnf5K3UGSomMtckQj4tDZk&scisig=AFWwaeYAAAAAZwThgm6UwZtaPKPUo8bDfe7ObiU&scisf=4&ct=citation&cd=-1&hl=zh-CN
+    image: ./assets/img/From Dynamic to Static.png
+    notes: Accept
